# controllers/services.controller.js
@@ -1,10 +1,9 @@
 const service = require("../services/services");
 
 const getServices = async (req, res, next) => {
-
   /* 
    #swagger.tags = ['Services']
-    #swagger.summary = 'Get Services'
+   #swagger.summary = 'Get Services'
     #swagger.description = 'Get a list of services'
 
   #swagger.parameters['page'] = {
@@ -14,7 +13,6 @@ const getServices = async (req, res, next) => {
     type: 'integer',
     minimum: 1
   }
-
   #swagger.parameters['limit'] = {
     in: 'query',
     description: 'Maximum number of news per page. Default is 9.',
@@ -22,6 +20,74 @@ const getServices = async (req, res, next) => {
     type: 'integer',
     minimum: 1,
     maximum: 100
+  }
+   #swagger.responses[200] = { 
+        description: 'List of services',
+        content: {
+          'application/json': {
+            schema: { $ref: '#/definitions/servicesList' },
+            example:[
+  {
+    "workDays": [],
+    "_id": "63ee67812e510dcbab7fbf37",
+    "title": "Whiskas",
+    "url": "https://www.whiskas.ua/",
+    "addressUrl": null,
+    "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/pets-support/images/sponsors/frame_285.png",
+    "address": null,
+    "phone": 380800500155,
+    "email": null
+  },
+  {
+    "_id": "63ee67812e510dcbab7fbf2f",
+    "title": "Притулок для бездомних тварин 'Сіріус'",
+    "url": "https://dogcat.com.ua",
+    "addressUrl": "https://goo.gl/maps/iq8NXEUf31EAQCzc6",
+    "imageUrl": "https://storage.googleapis.com/kidslikev2_bucket/pets-support/images/sponsors/frame_287.png",
+    "address": "Fedorivka, Kyiv Oblast, Ukraine, 07372",
+    "workDays": [
+      {
+        "isOpen": false
+      },
+      {
+        "isOpen": false
+      },
+      {
+        "isOpen": false
+      },
+      {
+        "isOpen": false
+      },
+      {
+        "isOpen": false
+      },
+      {
+        "isOpen": true,
+        "from": "11:00",
+        "to": "16:00"
+      },
+      {
+        "isOpen": true,
+        "from": "11:00",
+        "to": "16:00"
+      }
+    ],
+    "phone": 380931934069,
+    "email": null
+  }]
+          }
+        } 
+      }
+      #swagger.responses[404] = {
+        description: 'Services not found',
+        content: {
+           'application/json': {
+            schema: { $ref: '#/definitions/Error' },
+            example: {
+              message: 'Services not found'
+            }
+          }
+        }
   }
        
 
